Adds styling to button for appointment time scheduling

--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -18,7 +18,7 @@
   </div>
 
   <div class="xbuttons">
-    <%= f.submit %>
+    <%= f.submit "Add Appointment Time", class: "btn" %>
   </div>
 
 <% end %>
