--- a/app/views/notification_mailer/welcome_email.html.erb
+++ b/app/views/notification_mailer/welcome_email.html.erb
@@ -1,4 +1,5 @@
 
+<img src="https://cdn3.iconfinder.com/data/icons/abstract-1/512/Welcome-512.png"></img>
 <h1>Welcome to example.com,</h1>
 <p>
   You have successfully signed up to example.com,
