--- a/app/assets/stylesheets/styles/styles.scss
+++ b/app/assets/stylesheets/styles/styles.scss
@@ -1,10 +1,30 @@
-h3 {
-  color: #7AC8CC;
+
+
+h1 {
+  color: #351E17;
+  font-weight: 300 !important; 
+  font-size: 4em !important; 
 }
 
-h1, h2, h4 {
-color: #351E17;
+h2 {
+  color: #351E17;
+  font-weight: 200 !important; 
+  font-size: 3em !important; 
 }
+
+h3 {
+  color: #7AC8CC;
+  font-weight: 100 !important; 
+  font-size: 2em !important; 
+}
+
+h4 {
+  color: #351E17;
+  font-weight: 100 !important; 
+  font-size: 2em !important; 
+}
+
+
 
  /*form styling*/
 
