--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -18,7 +18,7 @@ for logged in users -->
     	<h2 class="valign center home-header">Common Context</h2>
       <div class="card home-card transparent-yellow z-depth-5 portica hoverable">
         <div class="card-content opacity chambray-text">
-          <span class="card-title center text-darken-2"><strong>Empowering aspiring developers to connect with mentors working in the field<strong></span>
+          <span class="card-title center text-darken-2">Empowering aspiring developers to connect with mentors working in the field</span>
         </div>
         <% if !current_user %>
           <div class="card-action center">
