Reverts some styling. Adds shadow to splash.

--- a/app/assets/stylesheets/styles/materialize.scss
+++ b/app/assets/stylesheets/styles/materialize.scss
@@ -9,7 +9,7 @@
 }
 
 .chambray-text {
-  color: #351E17 !important;
+  color: #364E93 !important;
 }
 
 .half-baked {
@@ -60,7 +60,7 @@
   color: #CAFCD8 !important;
 }
 
-.valign center home-header {
+/*.valign center home-header {
   
-}
+}*/
 
