--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -15,9 +15,9 @@ for logged in users -->
   <% end %>
   <div class="row home-col valign-wrapper home-wrapper">
     <div class="col s6 offset-s3 valign">
-    	<h2 class="valign center home-header">Common Context</h2>
+    	<h2 class="valign center home-header chambray-text">Common Context</h2>
       <div class="card home-card transparent-yellow z-depth-5 portica hoverable">
-        <div class="card-content opacity chambray-text">
+        <div class="card-content opacity">
           <span class="card-title center text-darken-2">Empowering aspiring developers to connect with mentors working in the field</span>
         </div>
         <% if !current_user %>
