--- a/app/assets/stylesheets/styles/styles.scss
+++ b/app/assets/stylesheets/styles/styles.scss
@@ -73,6 +73,8 @@ h4 {
 .home-header {
   padding-top: 50px;
   padding-bottom: 50px;
+  text-shadow: 0px 1px 1px black;
+  color:  #183ead !important;
 }
    
 .card {
@@ -88,7 +90,7 @@ h4 {
 }
 
 body {
-  background-image: linear-gradient(to bottom, rgba(255,255,255,0.9) 0%,rgba(255,255,255,0.9) 100%);
+  background-color: #fffef9 !important;
 }
 
 .home-container {
@@ -98,7 +100,7 @@ body {
 
 
 .transparent-yellow {
-  background-color: rgba(247,233,103,.5) !important;
+  background-color: rgba(255, 246, 162, 0.19) !important;
 }
 
 .welcome {
@@ -114,17 +116,17 @@ body {
   padding: 20px !important;
 }
 
-.xshow {
+/*.xshow {
   height: 1000px;
 }
-
-.widthset {
+*/
+/*.widthset {
   display: inline-block;
   vertical-align: top;
   width: 200px;
   height: 75px;
   margin: 10px;
-}
+}*/
 
 .btn-primary.active {
   color: white;
