--- a/app/views/mentees/_form.html.erb
+++ b/app/views/mentees/_form.html.erb
@@ -30,16 +30,17 @@
 		  	</div>
 		</div>
 
-	 	<div class="row">
+
+	<div class="diversity">
+	 	<div class="row demog">
 			<div class="col s6">
 				<div class="input-field">
+				  <i class="tiny material-icons right">info_outline</i>
 				  <%= f.label :race %>
 				  <%= f.text_field :race %><br>
 				</div>
 		  	</div>
 		</div>
-
-	<div class="diversity">
 
 		<div class="row">
 			<div class="col s6">
