--- a/app/views/mentees/_form.html.erb
+++ b/app/views/mentees/_form.html.erb
@@ -31,11 +31,13 @@
 		</div>
 
 
+<!-- <a class="btn tooltipped" data-position="bottom" data-delay="50" data-tooltip="I am tooltip">Hover me!</a> -->
+
 	<div class="diversity">
 	 	<div class="row demog">
 			<div class="col s6">
 				<div class="input-field">
-				  <i class="tiny material-icons right">info_outline</i>
+				  <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="descriptive text for race">info_outline</i>
 				  <%= f.label :race %>
 				  <%= f.text_field :race %><br>
 				</div>
@@ -45,6 +47,7 @@
 		<div class="row">
 			<div class="col s6">
 				<div class="input-field">
+				<i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="descriptive text for gender">info_outline</i>
 				  <%= f.label :gender %>
 				  <%= f.text_field :gender %><br>
 				</div>
@@ -54,6 +57,7 @@
 		<div class="row">
 			<div class="col s6">
 				<div class="input-field">
+				<i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="descriptive text for soc ec background">info_outline</i>
 				  <%= f.label :socioeconomic_background %>
 				  <%= f.text_field :socioeconomic_background %><br>
 				</div>
@@ -63,6 +67,7 @@
 		<div class="row">
 			<div class="col s6">
 				<div class="input-field">
+				<i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="descriptive text for orientation">info_outline</i>
 				  <%= f.label :orientation %>
 				  <%= f.text_field :orientation %><br>
 				</div>
