--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -73,6 +73,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
+          <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="descriptive text for race">info_outline</i>
             <%= f.label :race, class: "active" %>
             <%= f.text_field :race %>
           </div>
@@ -82,6 +83,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
+          <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="descriptive text for gender">info_outline</i>
             <%= f.label :gender, class: "active" %>
             <%= f.text_field :gender %>
           </div>
@@ -91,6 +93,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
+          <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="descriptive text for soc ec background">info_outline</i>
             <%= f.label :socioeconomic_background, class: "active" %>
             <%= f.text_field :socioeconomic_background %>
           </div>
@@ -100,6 +103,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
+          <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="descriptive text for orientation">info_outline</i>
             <%= f.label :orientation, class: "active" %>
             <%= f.text_field :orientation %>
           </div>
