Changes language in footer.

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -41,7 +41,7 @@ for logged in users -->
             <h2 class="center light-blue-text"><i class="medium material-icons">chat_bubble_outline</i></h2>
             <h5 class="center">Tell us about yourself</h5>
 
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <p class="light">CommonContext connects mentors with mentees to facilitate conversation and guidance for underrepresented people working in tech. Mentors and mentees are matched on their common ground and interests, and can meet to discuss anything from career advice to code reviews.  </p>
           </div>
         </div>
 
@@ -50,7 +50,7 @@ for logged in users -->
             <h2 class="center light-blue-text"><i class="medium material-icons">group</i></h2>
             <h5 class="center">Get connected</h5>
 
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <p class="light">We believe little conversations can drive big changes. We want people to talk about the challenges they've encountered, offer advice and share their stories to enrich our collective understanding and compassion for one another. </p>
           </div>
         </div>
 
@@ -59,7 +59,7 @@ for logged in users -->
             <h2 class="center light-blue-text"><i class="medium material-icons">trending_up</i></h2>
             <h5 class="center">Advance your career</h5>
 
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <p class="light">Whether you are established in your career and want to give back to the community or are starting out and looking for guidance, CommonContext will help you make meaningful professional connections.</p>
           </div>
         </div>
       </div>
@@ -73,7 +73,6 @@ for logged in users -->
         <div class="widthset">
           <h5 class="center white-text">About Us</h5>
           <p class="center grey-text text-lighten-4">We are budding Software Engineers willing to bring people from different culture to Software developemnt</p>
-
 
         </div>
         <div class="widthset">
