Adds assets for logo, does nothing.

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -63,7 +63,9 @@ for logged in users -->
           </div>
         </div>
       </div>
-
+           <!-- <div class="logo">
+      <%= image_tag "CommonContextLogo.png" %>
+      </div> -->
     </div>
 
 
