Rearranges ordering of splash content.

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -36,30 +36,32 @@ for logged in users -->
 
       <!--   Icon Section   -->
       <div class="row">
+         <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="medium material-icons">group</i></h2>
+            <h5 class="center">Get connected</h5>
+
+            <p class="light left-align">We believe little conversations can drive big changes. We want people to talk about the challenges they've encountered, offer advice and share their stories to enrich our collective understanding and compassion for one another. </p>
+          </div>
+        </div>
+
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="medium material-icons">chat_bubble_outline</i></h2>
             <h5 class="center">Tell us about yourself</h5>
 
-            <p class="light">CommonContext connects mentors with mentees to facilitate conversation and guidance for underrepresented people working in tech. Mentors and mentees are matched on their common ground and interests, and can meet to discuss anything from career advice to code reviews.  </p>
+            <p class="light center-align">CommonContext connects mentors with mentees to facilitate conversation and guidance for underrepresented people working in tech. Mentors and mentees are matched on their common ground and interests, and can meet to discuss anything from career advice to code reviews.  </p>
           </div>
         </div>
 
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="medium material-icons">group</i></h2>
-            <h5 class="center">Get connected</h5>
-
-            <p class="light">We believe little conversations can drive big changes. We want people to talk about the challenges they've encountered, offer advice and share their stories to enrich our collective understanding and compassion for one another. </p>
-          </div>
-        </div>
+       
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="medium material-icons">trending_up</i></h2>
             <h5 class="center">Advance your career</h5>
 
-            <p class="light">Whether you are established in your career and want to give back to the community or are starting out and looking for guidance, CommonContext will help you make meaningful professional connections.</p>
+            <p class="light right-align">Whether you are established in your career and want to give back to the community or are starting out and looking for guidance, CommonContext will help you make meaningful professional connections.</p>
           </div>
         </div>
       </div>
