--- a/app/assets/stylesheets/styles/styles.scss
+++ b/app/assets/stylesheets/styles/styles.scss
@@ -139,4 +139,11 @@ body {
   background-color: rgba(247, 233, 103, 0.8);
 }
 
+.demog-info {
+  padding-left: 40px;
+  padding-top: 10px;
+  padding-bottom: 40px;
+  font-style: italic;
+}
+
 
