--- a/app/views/mentees/_form.html.erb
+++ b/app/views/mentees/_form.html.erb
@@ -1,4 +1,12 @@
 <article class="xviews xmentees xnew card-panel hoverable">
+	<div class="demog-info">
+		<p>Demographic identity can be a sensitive discussion. All of our demographic form fields are optional, and text based, so you can enter whatever you like. </p>
+
+		<p> If a field is not important to how you identify, feel free to leave it blank. </p>
+
+		<p> We find that most of our users feel strongly about some aspect of their identity, so consider if your mentee would want to meet someone like you.
+		</p>
+	</div>
 	<%= form_for(@mentee) do |f| %>
 	<div class="field">
 		<div class="row">
@@ -121,7 +129,7 @@
 	 </div>
 	
 		<div class="xbuttons">
-	  		<%= f.submit  %>
+	  		<%= f.submit "Save", class: "btn"  %>
 		</div>
 
 	<% end %>
