--- a/app/views/mentees/edit.html.erb
+++ b/app/views/mentees/edit.html.erb
@@ -1,5 +1,7 @@
-<article class="xviews xmentees xshow">
-	<% if current_user && user_type == "mentee" && get_user.id == @mentee.id %>
+<article class="xviews xmentees xshow container row">
+</section>
+		<section class="col s5">  
+	     <% if current_user && user_type == "mentee" && get_user.id == @mentee.id %>
 		<h2>Edit Profile</h2>
 		<%= render 'form'%>
 
@@ -8,4 +10,7 @@
 	<% else %>
 		<p> This page is private. </p>
 	<% end %>
+	    </section>
+		<section class="col s7 center card hoverable">
+		</section>
 </article>
