--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -1,4 +1,12 @@
-<article class="xviews xmentor xnew card-panel hoverable">
+<article class="xviews xmentor xnew card-panel col s6 hoverable">
+  <div class="demog-info">
+    <p>Demographic identity can be a sensitive discussion. All of our demographic form fields are optional, and text based, so you can enter whatever you like. </p>
+
+      <p> If a field is not important to how you identify, feel free to leave it blank. </p>
+
+      <p> We find that most of our users feel strongly about some aspect of their identity, so consider if your mentee would want to meet someone like you.
+      </p>
+    </div>
   <%= form_for(@mentor) do |f| %>
 
     <div class="row">
