--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -72,7 +72,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
-          <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="descriptive text for race">info_outline</i>
+          <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="If you are biracial, or identify with multiple ethnicities, please list them all!">info_outline</i>
             <%= f.label :race, class: "active" %>
             <%= f.text_field :race %>
           </div>
@@ -82,7 +82,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
-          <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="descriptive text for gender">info_outline</i>
+          <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="If you are gender non-conforming, please include your preferred pronouns">info_outline</i>
             <%= f.label :gender, class: "active" %>
             <%= f.text_field :gender %>
           </div>
@@ -92,7 +92,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
-          <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="descriptive text for soc ec background">info_outline</i>
+          <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="Please bare in mind that this field means to capture people who feel underserved because of their socioeconomic background.">info_outline</i>
             <%= f.label :socioeconomic_background, class: "active" %>
             <%= f.text_field :socioeconomic_background %>
           </div>
@@ -102,7 +102,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
-          <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="descriptive text for orientation">info_outline</i>
+          <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="This can overlap with gender, but if it doesn’t for you, fill it out!">info_outline</i>
             <%= f.label :orientation, class: "active" %>
             <%= f.text_field :orientation %>
           </div>
@@ -112,6 +112,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
+          <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="Was there something that we missed? We want to make sure that what you identify with is captured here!">info_outline</i>
             <%= f.label :other %>
             <%= f.text_field :other %>
           </div>
