Changes linkedin link language. Adds padding to articles.

--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -53,8 +53,8 @@
   </script>
 <% end %>
 
-<div class="container">
-  <div>Here are your appointments</div>
+<article class="container">
+
   
-  <div id='calendar'></div>
-</div>
+  <div id='calendar' class="card hoverable"></div>
+</article>
