--- a/app/views/mentees/_mentor_deets_card.html.erb
+++ b/app/views/mentees/_mentor_deets_card.html.erb
@@ -6,7 +6,7 @@
 		<p>Years of experience: <%=a_match.years_of_experience%></p>
 		<p>Interests: <%=a_match.interests%></p>
 		<p>Email: <%=a_match.email%></p>
-		<p>LinkedIn Link: <span><%= link_to a_match.linkedin_link, "https://#{@mentee.linkedin_link}"%></p>
+		<p><%= link_to "LinkedIn Profile", a_match.linkedin_link, "https://#{@mentee.linkedin_link}"%></p>
 	</div>
 </section>
 
