--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,6 +1,7 @@
-<article class="xviews xappointments xshow">
+<article class="xviews xappointments xshow row">
 	<% if current_user && ((user_type == "mentee" && get_user.id == @appointment.mentee.id) ||  (user_type == "mentor" && get_user.id == @appointment.mentor.id)) %>
-	<h2>Appointment</h2>
+	<h3>Appointment</h3>
+	<section class="card hoverable col s3">
 	<% if @appointment %>
 		<ul>
 			<li>
@@ -14,6 +15,7 @@
 			</li>
 		</ul>
 	<% end %>
+	</section>
 	<% else %>
 	<p>You may only view your appointments.</p>
 	<% end %>
