--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -21,7 +21,7 @@ for logged in users -->
           <span class="card-title center text-darken-2">Empowering aspiring developers to connect with mentors working in the field</span>
         </div>
         <% if !current_user %>
-          <div class="card-action center">
+          <div class="center">
           <%= link_to "auth/linkedin" do%><%= image_tag('signin-linkedin.png') %>
 		    <% end %>
         <% end %>
