email template change

--- a/app/views/notification_mailer/welcome_email.html.erb
+++ b/app/views/notification_mailer/welcome_email.html.erb
@@ -1,11 +1,14 @@
+<!-- <img src="https://cdn3.iconfinder.com/data/icons/abstract-1/512/Welcome-512.png"></img> -->
+<div class="table border">
+  <h1><font color="#20B2AA">Welcome to Common context,</font></h1>
+  <h3>Empowering aspiring developers to connect with mentors working in the field</h3>
+  <p>
+    Your appointment is confirmed.<br>
+    To login to the site, just follow this link:.<br>
+    <a href="www.commoncontextinfo.com">www.commoncontextinfo.com</a>
+  </p>
+  <p>Thanks you!</p>
 
-<img src="https://cdn3.iconfinder.com/data/icons/abstract-1/512/Welcome-512.png"></img>
-<h1>Welcome to example.com,</h1>
-<p>
-  You have successfully signed up to example.com,
-  your username is: <br>
-</p>
-<p>
-  To login to the site, just follow this link: .
-</p>
-<p>Thanks for joining and have a great day!</p>
+  Regards,<br>
+  Common Context Team
+</div>
