--- a/app/views/notification_mailer/welcome_email.text.erb
+++ b/app/views/notification_mailer/welcome_email.text.erb
@@ -1,9 +1,11 @@
-Welcome to example.com, 
-===============================================
+Welcome to Common context, 
  
-You have successfully signed up to example.com,
-your username is: .
+Your appointment is confirmed.
  
 To login to the site, just follow this link:.
+www.commoncontextinfo.com
  
-Thanks for joining and have a great day!
+Thanks you!
+
+Regards
+Common Context Team
