--- a/app/assets/stylesheets/styles/styles.scss
+++ b/app/assets/stylesheets/styles/styles.scss
@@ -119,7 +119,7 @@ body {
 
 .btn-primary.active {
   color: white;
-  background-color: rgba(247, 233, 103, 0.5);
+  background-color: #039be5;
   border-color: white;
 }
 
