--- a/app/assets/stylesheets/styles/styles.scss.erb
+++ b/app/assets/stylesheets/styles/styles.scss.erb
@@ -80,8 +80,9 @@ h4 {
 }
    
 .card {
-  padding: 25px;
+  padding: 25px 25px 25px 25px !important;
 }
+
 
 .home-wrapper {
   padding: 70px;
@@ -152,3 +153,7 @@ article {
   font-style: italic;
 }
 
+.mentor-match {
+  margin: 10px 10px 10px 10px;
+  padding: 10px 10px 10px 10px;
+}
