fixes spelling error.

--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -1,5 +1,5 @@
 <section class="xviews xmentor xnew card-panel hoverable">
-  <div class="demog-info left-align">
+  <div class="demog-info">
     <p>Demographic identity can be a sensitive discussion. All of our demographic form fields are optional, and text based, so you can enter whatever you like. </p>
 
       <p> If a field is not important to how you identify, feel free to leave it blank. </p>
@@ -93,7 +93,7 @@
       <div class="row">
         <div class="col s12">
           <div class="input-field">
-          <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="Please bare in mind that this field means to capture people who feel underserved because of their socioeconomic background.">info_outline</i>
+          <i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="Please bear in mind that this field means to capture people who feel underserved because of their socioeconomic background.">info_outline</i>
             <%= f.label :socioeconomic_background, class: "active" %>
             <%= f.text_field :socioeconomic_background %>
           </div>
