--- a/app/views/mentees/_form.html.erb
+++ b/app/views/mentees/_form.html.erb
@@ -68,7 +68,7 @@
 		<div class="row">
 			<div class="col s12">
 				<div class="input-field">
-				<i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="Please bare in mind that this field means to capture people who feel underserved because of their socioeconomic background.">info_outline</i>
+				<i class="tiny material-icons right tooltipped" data-position="right" data-delay="50" data-tooltip="Please bear in mind that this field means to capture people who feel underserved because of their socioeconomic background.">info_outline</i>
 				  <%= f.label :socioeconomic_background %>
 				  <%= f.text_field :socioeconomic_background %><br>
 				</div>
